fix: better font size and spacing, plus reduced width on blog post

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -472,6 +472,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 p {
+  font-size: 18px;
   line-height:1.4;
 }
 
